<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_view_height_edit"
            android:layout_margin="@dimen/xsmall_margin"
            android:foregroundGravity="center"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/gradient_top"
            app:cardCornerRadius="25dp"
            app:cardElevation="12dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/xsmall_margin"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextEditStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/xsmall_margin"
                    android:gravity="center"
                    android:text="@string/edit_student"
                    android:textSize="@dimen/text_size_xbig"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editStudentName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xsmall_margin"
                    android:layout_marginBottom="@dimen/xsmall_margin"
                    android:background="@drawable/custom_edit_text"
                    android:hint="@string/student_name"
                    android:paddingStart="@dimen/large_padding_left"
                    android:paddingTop="@dimen/xsmall_padding_top_bot"
                    android:paddingBottom="@dimen/xsmall_padding_top_bot"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/editStudentEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/xsmall_margin"
                    android:background="@drawable/custom_edit_text"
                    android:hint="@string/student_email"
                    android:paddingStart="@dimen/large_padding_left"
                    android:paddingTop="@dimen/xsmall_padding_top_bot"
                    android:paddingBottom="@dimen/xsmall_padding_top_bot"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/editStudentCourse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/xsmall_margin"
                    android:background="@drawable/custom_edit_text"
                    android:hint="@string/student_course"
                    android:paddingStart="@dimen/large_padding_left"
                    android:paddingTop="@dimen/xsmall_padding_top_bot"
                    android:paddingBottom="@dimen/xsmall_padding_top_bot"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/editStudentGrade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/xsmall_margin"
                    android:background="@drawable/custom_edit_text"
                    android:hint="@string/student_grade"
                    android:paddingStart="@dimen/large_padding_left"
                    android:paddingTop="@dimen/xsmall_padding_top_bot"
                    android:paddingBottom="@dimen/xsmall_padding_top_bot"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/editStudentSpeciality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/xsmall_margin"
                    android:background="@drawable/custom_edit_text"
                    android:hint="@string/student_speciality"
                    android:paddingStart="@dimen/large_padding_left"
                    android:paddingTop="@dimen/xsmall_padding_top_bot"
                    android:paddingBottom="@dimen/xsmall_padding_top_bot"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/saveEditButton"
                    android:layout_width="@dimen/log_btn_width"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edit_text"
                    android:text="@string/save" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>