<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/xsmall_margin"
            android:foregroundGravity="center"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/gradient_top"
            app:cardCornerRadius="25dp"
            app:cardElevation="12dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/resPassText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/reset_password"
                    android:textSize="@dimen/text_size_middle"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/sendEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xsmall_margin"
                    android:background="@drawable/custom_edit_text"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/large_padding_left"
                    android:paddingTop="@dimen/xsmall_padding_top_bot"
                    android:paddingBottom="@dimen/xsmall_padding_top_bot"
                    tools:ignore="RtlSymmetry" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnSendReset"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/custom_edit_text"
                        android:text="@string/send" />

                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_edit_text"
                        android:text="@string/cancel" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>